tests/baselines/reference/privacyVarDeclFile.errors.txt
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(30,25): error TS4028: Type of property 'myProperty' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(30,25): error TS4028: Type of property 'myProperty' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(46,44): error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(48,31): error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(73,55): error TS4025: Type of variable 'publicVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(78,70): error TS4025: Type of variable 'publicAmbientVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(84,25): error TS4028: Type of property 'myProperty' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(87,44): error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(88,31): error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(90,61): error TS4025: Type of variable 'publicVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(91,76): error TS4025: Type of variable 'publicAmbientVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(105,21): error TS4028: Type of property 'myProperty' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(121,40): error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(123,27): error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(148,51): error TS4025: Type of variable 'publicVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(153,66): error TS4025: Type of variable 'publicAmbientVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(159,21): error TS4028: Type of property 'myProperty' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(162,40): error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(163,27): error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(165,57): error TS4025: Type of variable 'publicVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts(166,72): error TS4025: Type of variable 'publicAmbientVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(9,17): error TS4028: Type of property 'myProperty' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(25,36): error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(27,23): error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(52,47): error TS4025: Type of variable 'publicVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(57,62): error TS4025: Type of variable 'publicAmbientVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(63,17): error TS4028: Type of property 'myProperty' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(66,36): error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(67,23): error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(69,53): error TS4025: Type of variable 'publicVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(70,68): error TS4025: Type of variable 'publicAmbientVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(90,21): error TS4028: Type of property 'myProperty' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(106,40): error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(108,27): error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(133,51): error TS4025: Type of variable 'publicVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(138,66): error TS4025: Type of variable 'publicAmbientVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(144,21): error TS4028: Type of property 'myProperty' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(147,40): error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(148,27): error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(150,57): error TS4025: Type of variable 'publicVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(151,72): error TS4025: Type of variable 'publicAmbientVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(172,21): error TS4028: Type of property 'myProperty' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(172,21): error TS4028: Type of property 'myProperty' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(188,40): error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(190,27): error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(215,51): error TS4025: Type of variable 'publicVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(220,66): error TS4025: Type of variable 'publicAmbientVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(226,21): error TS4028: Type of property 'myProperty' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(229,40): error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(230,27): error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(232,57): error TS4025: Type of variable 'publicVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.
tests/cases/compiler/privacyVarDeclFile_externalModule.ts(233,72): error TS4025: Type of variable 'publicAmbientVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.


==== tests/cases/compiler/privacyVarDeclFile_externalModule.ts (31 errors) ====
    
    class privateClass {
    }
    
    export class publicClass {
    }
    
    export interface publicInterfaceWithPrivatePropertyTypes {
        myProperty: privateClass;  // Error
                    ~~~~~~~~~~~~
!!! error TS4028: Type of property 'myProperty' references inaccessible name 'privateClass'.
    }
    
    export interface publicInterfaceWithPublicPropertyTypes {
        myProperty: publicClass;
    }
    
    interface privateInterfaceWithPrivatePropertyTypes {
        myProperty: privateClass;
    }
    
    interface privateInterfaceWithPublicPropertyTypes {
        myProperty: publicClass;
    }
    
    export class publicClassWithWithPrivatePropertyTypes {
        static myPublicStaticProperty: privateClass; // Error
                                       ~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateClass'.
        private static myPrivateStaticProperty: privateClass;
        myPublicProperty: privateClass; // Error
                          ~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateClass'.
        private myPrivateProperty: privateClass;
    }
    
    export class publicClassWithWithPublicPropertyTypes {
        static myPublicStaticProperty: publicClass;
        private static myPrivateStaticProperty: publicClass;
        myPublicProperty: publicClass;
        private myPrivateProperty: publicClass;
    }
    
    class privateClassWithWithPrivatePropertyTypes {
        static myPublicStaticProperty: privateClass;
        private static myPrivateStaticProperty: privateClass;
        myPublicProperty: privateClass;
        private myPrivateProperty: privateClass;
    }
    
    class privateClassWithWithPublicPropertyTypes {
        static myPublicStaticProperty: publicClass;
        private static myPrivateStaticProperty: publicClass;
        myPublicProperty: publicClass;
        private myPrivateProperty: publicClass;
    }
    
    export var publicVarWithPrivatePropertyTypes: privateClass; // Error
                                                  ~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
    export var publicVarWithPublicPropertyTypes: publicClass;
    var privateVarWithPrivatePropertyTypes: privateClass;
    var privateVarWithPublicPropertyTypes: publicClass;
    
    export declare var publicAmbientVarWithPrivatePropertyTypes: privateClass; // Error
                                                                 ~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicAmbientVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
    export declare var publicAmbientVarWithPublicPropertyTypes: publicClass;
    declare var privateAmbientVarWithPrivatePropertyTypes: privateClass;
    declare var privateAmbientVarWithPublicPropertyTypes: publicClass;
    
    export interface publicInterfaceWithPrivateModulePropertyTypes {
        myProperty: privateModule.publicClass; // Error
                    ~~~~~~~~~~~~~
!!! error TS4028: Type of property 'myProperty' references inaccessible name 'privateModule'.
    }
    export class publicClassWithPrivateModulePropertyTypes {
        static myPublicStaticProperty: privateModule.publicClass; // Error
                                       ~~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateModule'.
        myPublicProperty: privateModule.publicClass; // Error
                          ~~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateModule'.
    }
    export var publicVarWithPrivateModulePropertyTypes: privateModule.publicClass; // Error
                                                        ~~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.
    export declare var publicAmbientVarWithPrivateModulePropertyTypes: privateModule.publicClass; // Error
                                                                       ~~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicAmbientVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.
    
    interface privateInterfaceWithPrivateModulePropertyTypes {
        myProperty: privateModule.publicClass;
    }
    class privateClassWithPrivateModulePropertyTypes {
        static myPublicStaticProperty: privateModule.publicClass;
        myPublicProperty: privateModule.publicClass;
    }
    var privateVarWithPrivateModulePropertyTypes: privateModule.publicClass;
    declare var privateAmbientVarWithPrivateModulePropertyTypes: privateModule.publicClass;
    
    export module publicModule {
        class privateClass {
        }
    
        export class publicClass {
        }
    
        export interface publicInterfaceWithPrivatePropertyTypes {
            myProperty: privateClass;  // Error
                        ~~~~~~~~~~~~
!!! error TS4028: Type of property 'myProperty' references inaccessible name 'privateClass'.
        }
    
        export interface publicInterfaceWithPublicPropertyTypes {
            myProperty: publicClass;
        }
    
        interface privateInterfaceWithPrivatePropertyTypes {
            myProperty: privateClass;
        }
    
        interface privateInterfaceWithPublicPropertyTypes {
            myProperty: publicClass;
        }
    
        export class publicClassWithWithPrivatePropertyTypes {
            static myPublicStaticProperty: privateClass; // Error
                                           ~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateClass'.
            private static myPrivateStaticProperty: privateClass;
            myPublicProperty: privateClass; // Error
                              ~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateClass'.
            private myPrivateProperty: privateClass;
        }
    
        export class publicClassWithWithPublicPropertyTypes {
            static myPublicStaticProperty: publicClass;
            private static myPrivateStaticProperty: publicClass;
            myPublicProperty: publicClass;
            private myPrivateProperty: publicClass;
        }
    
        class privateClassWithWithPrivatePropertyTypes {
            static myPublicStaticProperty: privateClass;
            private static myPrivateStaticProperty: privateClass;
            myPublicProperty: privateClass;
            private myPrivateProperty: privateClass;
        }
    
        class privateClassWithWithPublicPropertyTypes {
            static myPublicStaticProperty: publicClass;
            private static myPrivateStaticProperty: publicClass;
            myPublicProperty: publicClass;
            private myPrivateProperty: publicClass;
        }
    
        export var publicVarWithPrivatePropertyTypes: privateClass; // Error
                                                      ~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
        export var publicVarWithPublicPropertyTypes: publicClass;
        var privateVarWithPrivatePropertyTypes: privateClass;
        var privateVarWithPublicPropertyTypes: publicClass;
    
        export declare var publicAmbientVarWithPrivatePropertyTypes: privateClass; // Error
                                                                     ~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicAmbientVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
        export declare var publicAmbientVarWithPublicPropertyTypes: publicClass;
        declare var privateAmbientVarWithPrivatePropertyTypes: privateClass;
        declare var privateAmbientVarWithPublicPropertyTypes: publicClass;
    
        export interface publicInterfaceWithPrivateModulePropertyTypes {
            myProperty: privateModule.publicClass; // Error
                        ~~~~~~~~~~~~~
!!! error TS4028: Type of property 'myProperty' references inaccessible name 'privateModule'.
        }
        export class publicClassWithPrivateModulePropertyTypes {
            static myPublicStaticProperty: privateModule.publicClass; // Error
                                           ~~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateModule'.
            myPublicProperty: privateModule.publicClass; // Error
                              ~~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateModule'.
        }
        export var publicVarWithPrivateModulePropertyTypes: privateModule.publicClass; // Error
                                                            ~~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.
        export declare var publicAmbientVarWithPrivateModulePropertyTypes: privateModule.publicClass; // Error
                                                                           ~~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicAmbientVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.
    
        interface privateInterfaceWithPrivateModulePropertyTypes {
            myProperty: privateModule.publicClass;
        }
        class privateClassWithPrivateModulePropertyTypes {
            static myPublicStaticProperty: privateModule.publicClass;
            myPublicProperty: privateModule.publicClass;
        }
        var privateVarWithPrivateModulePropertyTypes: privateModule.publicClass;
        declare var privateAmbientVarWithPrivateModulePropertyTypes: privateModule.publicClass;
    }
    
    module privateModule {
        class privateClass {
        }
    
        export class publicClass {
        }
    
        export interface publicInterfaceWithPrivatePropertyTypes {
            myProperty: privateClass;  
                        ~~~~~~~~~~~~
!!! error TS4028: Type of property 'myProperty' references inaccessible name 'privateClass'.
                        ~~~~~~~~~~~~
!!! error TS4028: Type of property 'myProperty' references inaccessible name 'privateModule'.
        }
    
        export interface publicInterfaceWithPublicPropertyTypes {
            myProperty: publicClass;
        }
    
        interface privateInterfaceWithPrivatePropertyTypes {
            myProperty: privateClass;
        }
    
        interface privateInterfaceWithPublicPropertyTypes {
            myProperty: publicClass;
        }
    
        export class publicClassWithWithPrivatePropertyTypes {
            static myPublicStaticProperty: privateClass; 
                                           ~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateClass'.
            private static myPrivateStaticProperty: privateClass;
            myPublicProperty: privateClass; 
                              ~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateClass'.
            private myPrivateProperty: privateClass;
        }
    
        export class publicClassWithWithPublicPropertyTypes {
            static myPublicStaticProperty: publicClass;
            private static myPrivateStaticProperty: publicClass;
            myPublicProperty: publicClass;
            private myPrivateProperty: publicClass;
        }
    
        class privateClassWithWithPrivatePropertyTypes {
            static myPublicStaticProperty: privateClass;
            private static myPrivateStaticProperty: privateClass;
            myPublicProperty: privateClass;
            private myPrivateProperty: privateClass;
        }
    
        class privateClassWithWithPublicPropertyTypes {
            static myPublicStaticProperty: publicClass;
            private static myPrivateStaticProperty: publicClass;
            myPublicProperty: publicClass;
            private myPrivateProperty: publicClass;
        }
    
        export var publicVarWithPrivatePropertyTypes: privateClass; 
                                                      ~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
        export var publicVarWithPublicPropertyTypes: publicClass;
        var privateVarWithPrivatePropertyTypes: privateClass;
        var privateVarWithPublicPropertyTypes: publicClass;
    
        export declare var publicAmbientVarWithPrivatePropertyTypes: privateClass; 
                                                                     ~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicAmbientVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
        export declare var publicAmbientVarWithPublicPropertyTypes: publicClass;
        declare var privateAmbientVarWithPrivatePropertyTypes: privateClass;
        declare var privateAmbientVarWithPublicPropertyTypes: publicClass;
    
        export interface publicInterfaceWithPrivateModulePropertyTypes {
            myProperty: privateModule.publicClass; 
                        ~~~~~~~~~~~~~
!!! error TS4028: Type of property 'myProperty' references inaccessible name 'privateModule'.
        }
        export class publicClassWithPrivateModulePropertyTypes {
            static myPublicStaticProperty: privateModule.publicClass; 
                                           ~~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateModule'.
            myPublicProperty: privateModule.publicClass; 
                              ~~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateModule'.
        }
        export var publicVarWithPrivateModulePropertyTypes: privateModule.publicClass; 
                                                            ~~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.
        export declare var publicAmbientVarWithPrivateModulePropertyTypes: privateModule.publicClass;
                                                                           ~~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicAmbientVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.
    
        interface privateInterfaceWithPrivateModulePropertyTypes {
            myProperty: privateModule.publicClass;
        }
        class privateClassWithPrivateModulePropertyTypes {
            static myPublicStaticProperty: privateModule.publicClass;
            myPublicProperty: privateModule.publicClass;
        }
        var privateVarWithPrivateModulePropertyTypes: privateModule.publicClass;
        declare var privateAmbientVarWithPrivateModulePropertyTypes: privateModule.publicClass;
    }
    
==== tests/cases/compiler/privacyVarDeclFile_GlobalFile.ts (21 errors) ====
    class publicClassInGlobal {
    }
    interface publicInterfaceWithPublicPropertyTypesInGlobal {
        myProperty: publicClassInGlobal;
    }
    class publicClassWithWithPublicPropertyTypesInGlobal {
        static myPublicStaticProperty: publicClassInGlobal;
        private static myPrivateStaticProperty: publicClassInGlobal;
        myPublicProperty: publicClassInGlobal;
        private myPrivateProperty: publicClassInGlobal;
    }
    var publicVarWithPublicPropertyTypesInGlobal: publicClassInGlobal;
    declare var publicAmbientVarWithPublicPropertyTypesInGlobal: publicClassInGlobal;
    
    module publicModuleInGlobal {
        class privateClass {
        }
    
        export class publicClass {
        }
    
        module privateModule {
            class privateClass {
            }
    
            export class publicClass {
            }
    
            export interface publicInterfaceWithPrivatePropertyTypes {
                myProperty: privateClass;
                            ~~~~~~~~~~~~
!!! error TS4028: Type of property 'myProperty' references inaccessible name 'privateClass'.
                            ~~~~~~~~~~~~
!!! error TS4028: Type of property 'myProperty' references inaccessible name 'privateModule'.
            }
    
            export interface publicInterfaceWithPublicPropertyTypes {
                myProperty: publicClass;
            }
    
            interface privateInterfaceWithPrivatePropertyTypes {
                myProperty: privateClass;
            }
    
            interface privateInterfaceWithPublicPropertyTypes {
                myProperty: publicClass;
            }
    
            export class publicClassWithWithPrivatePropertyTypes {
                static myPublicStaticProperty: privateClass;
                                               ~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateClass'.
                private static myPrivateStaticProperty: privateClass;
                myPublicProperty: privateClass;
                                  ~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateClass'.
                private myPrivateProperty: privateClass;
            }
    
            export class publicClassWithWithPublicPropertyTypes {
                static myPublicStaticProperty: publicClass;
                private static myPrivateStaticProperty: publicClass;
                myPublicProperty: publicClass;
                private myPrivateProperty: publicClass;
            }
    
            class privateClassWithWithPrivatePropertyTypes {
                static myPublicStaticProperty: privateClass;
                private static myPrivateStaticProperty: privateClass;
                myPublicProperty: privateClass;
                private myPrivateProperty: privateClass;
            }
    
            class privateClassWithWithPublicPropertyTypes {
                static myPublicStaticProperty: publicClass;
                private static myPrivateStaticProperty: publicClass;
                myPublicProperty: publicClass;
                private myPrivateProperty: publicClass;
            }
    
            export var publicVarWithPrivatePropertyTypes: privateClass;
                                                          ~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
            export var publicVarWithPublicPropertyTypes: publicClass;
            var privateVarWithPrivatePropertyTypes: privateClass;
            var privateVarWithPublicPropertyTypes: publicClass;
    
            export declare var publicAmbientVarWithPrivatePropertyTypes: privateClass;
                                                                         ~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicAmbientVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
            export declare var publicAmbientVarWithPublicPropertyTypes: publicClass;
            declare var privateAmbientVarWithPrivatePropertyTypes: privateClass;
            declare var privateAmbientVarWithPublicPropertyTypes: publicClass;
    
            export interface publicInterfaceWithPrivateModulePropertyTypes {
                myProperty: privateModule.publicClass;
                            ~~~~~~~~~~~~~
!!! error TS4028: Type of property 'myProperty' references inaccessible name 'privateModule'.
            }
            export class publicClassWithPrivateModulePropertyTypes {
                static myPublicStaticProperty: privateModule.publicClass;
                                               ~~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateModule'.
                myPublicProperty: privateModule.publicClass;
                                  ~~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateModule'.
            }
            export var publicVarWithPrivateModulePropertyTypes: privateModule.publicClass;
                                                                ~~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.
            export declare var publicAmbientVarWithPrivateModulePropertyTypes: privateModule.publicClass;
                                                                               ~~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicAmbientVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.
    
            interface privateInterfaceWithPrivateModulePropertyTypes {
                myProperty: privateModule.publicClass;
            }
            class privateClassWithPrivateModulePropertyTypes {
                static myPublicStaticProperty: privateModule.publicClass;
                myPublicProperty: privateModule.publicClass;
            }
            var privateVarWithPrivateModulePropertyTypes: privateModule.publicClass;
            declare var privateAmbientVarWithPrivateModulePropertyTypes: privateModule.publicClass;
        }
    
        export interface publicInterfaceWithPrivatePropertyTypes {
            myProperty: privateClass;  // Error
                        ~~~~~~~~~~~~
!!! error TS4028: Type of property 'myProperty' references inaccessible name 'privateClass'.
        }
    
        export interface publicInterfaceWithPublicPropertyTypes {
            myProperty: publicClass;
        }
    
        interface privateInterfaceWithPrivatePropertyTypes {
            myProperty: privateClass;
        }
    
        interface privateInterfaceWithPublicPropertyTypes {
            myProperty: publicClass;
        }
    
        export class publicClassWithWithPrivatePropertyTypes {
            static myPublicStaticProperty: privateClass; // Error
                                           ~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateClass'.
            private static myPrivateStaticProperty: privateClass;
            myPublicProperty: privateClass; // Error
                              ~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateClass'.
            private myPrivateProperty: privateClass;
        }
    
        export class publicClassWithWithPublicPropertyTypes {
            static myPublicStaticProperty: publicClass;
            private static myPrivateStaticProperty: publicClass;
            myPublicProperty: publicClass;
            private myPrivateProperty: publicClass;
        }
    
        class privateClassWithWithPrivatePropertyTypes {
            static myPublicStaticProperty: privateClass;
            private static myPrivateStaticProperty: privateClass;
            myPublicProperty: privateClass;
            private myPrivateProperty: privateClass;
        }
    
        class privateClassWithWithPublicPropertyTypes {
            static myPublicStaticProperty: publicClass;
            private static myPrivateStaticProperty: publicClass;
            myPublicProperty: publicClass;
            private myPrivateProperty: publicClass;
        }
    
        export var publicVarWithPrivatePropertyTypes: privateClass; // Error
                                                      ~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
        export var publicVarWithPublicPropertyTypes: publicClass;
        var privateVarWithPrivatePropertyTypes: privateClass;
        var privateVarWithPublicPropertyTypes: publicClass;
    
        export declare var publicAmbientVarWithPrivatePropertyTypes: privateClass; // Error
                                                                     ~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicAmbientVarWithPrivatePropertyTypes' references inaccessible name 'privateClass'.
        export declare var publicAmbientVarWithPublicPropertyTypes: publicClass;
        declare var privateAmbientVarWithPrivatePropertyTypes: privateClass;
        declare var privateAmbientVarWithPublicPropertyTypes: publicClass;
    
        export interface publicInterfaceWithPrivateModulePropertyTypes {
            myProperty: privateModule.publicClass; // Error
                        ~~~~~~~~~~~~~
!!! error TS4028: Type of property 'myProperty' references inaccessible name 'privateModule'.
        }
        export class publicClassWithPrivateModulePropertyTypes {
            static myPublicStaticProperty: privateModule.publicClass; // Error
                                           ~~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicStaticProperty' references inaccessible name 'privateModule'.
            myPublicProperty: privateModule.publicClass; // Error
                              ~~~~~~~~~~~~~
!!! error TS4028: Type of property 'myPublicProperty' references inaccessible name 'privateModule'.
        }
        export var publicVarWithPrivateModulePropertyTypes: privateModule.publicClass; // Error
                                                            ~~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.
        export declare var publicAmbientVarWithPrivateModulePropertyTypes: privateModule.publicClass; // Error
                                                                           ~~~~~~~~~~~~~
!!! error TS4025: Type of variable 'publicAmbientVarWithPrivateModulePropertyTypes' references inaccessible name 'privateModule'.
    
        interface privateInterfaceWithPrivateModulePropertyTypes {
            myProperty: privateModule.publicClass;
        }
        class privateClassWithPrivateModulePropertyTypes {
            static myPublicStaticProperty: privateModule.publicClass;
            myPublicProperty: privateModule.publicClass;
        }
        var privateVarWithPrivateModulePropertyTypes: privateModule.publicClass;
        declare var privateAmbientVarWithPrivateModulePropertyTypes: privateModule.publicClass;
    }